[package]
name = "sausage"
version = "0.1.0"
edition = "2021"
description = "Print cause chains of errors"
authors = ["Niclas Meyer <niclas@countingsort.com>"]
homepage = "https://github.com/buffet/sausage"
repository = "https://github.com/buffet/sausage"
license = "Apache-2.0 OR MIT"

[lib]
doctest = false
test = false

[dependencies]
indenter = { version = "0.3.3", default-features = false }
